# rust-component-boilerplate

./: .gitignore  Cargo.toml  Makefile  README.md
makefiles/common/: Makefile.common  Makefile.prelude
schemas/: my-component.apex
