[package]
name = "{{project-name}}"
version = "0.0.0"
description = ""
authors = ["{{authors}}"]
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[features]
default = ["host", "guest"]
host = []
guest = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
wasmflow-sdk = { version = "0.10", features = ["v1"] }

[dev-dependencies]
